--- a/examples/adversarial-style-transfer/ast_config.yaml
+++ b/examples/adversarial-style-transfer/ast_config.yaml
@@ -8,6 +8,7 @@ dataset_seed: null
 direction: "???"
 # Reward
 style_tokenizer: "bert-base-uncased"
+similarity_weight: 2.0
 lower_outputs: true
 control_output_length: true
 # Single Prompt Model
